Fix header alignment issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -37,6 +37,11 @@ body {
     width: 113px;
     display: inline-block;
     text-align: center;
+    float: left;
+  }
+
+  .end {
+    float: right;
   }
 
   a {
@@ -49,10 +54,6 @@ body {
   .menu-holder {
     border-top: 1px solid $lightgrey;
   }
-}
-
-.end {
-  float: right;
 }
 
 .privilege {
